# resume-parser-server

./: .gitignore  Output.json  Output_Col.json  README.md  Rayabandi Chaitanya Resume.docx  Rayabandi Chaithanya.docx  Resume_Parser_Detailed_Report_TejasJM.docx  gemini.py  gemini_output.json  langgraph_multiple.py  main.py  pyproject.toml
